# book-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Book.h  BookStore.h  FileManager.h  Manager.h  Utils.h
src/: Book.cpp  BookStore.cpp  FileManager.cpp  Manager.cpp  Utils.cpp  main.cpp
test/: BookManager_test.cpp  CMakeLists.txt
